<resources>
    <string name="app_name">Learning Japanese Application</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Reset Password</string>
    <string name="create_account">Create Account</string>
    <string name="app_slogan">Japanese Is Easy</string>
    <string name="app_heading">Japanese</string>
    <string name="sign_up">Sign Up</string>
    <string name="recognize">Recognize</string>
    <string name="clear">Clear</string>
    <string name="about_us">About Us</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="otp_description_text">Code is sent to your phone: </string>
    <string name="otp_code_text">Code OTP</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="enter_email">Enter Email or Username</string>reset_method
    <string name="forget_password_detail">Provide your account\'s email to reset your password</string>
    <string name="reset_method">Choose Reset Method</string>
    <string name="mail_address" translatable="false">abcd@gmail.com</string>
    <string name="using_sms">Using SMS Method</string>
    <string name="sms_number" translatable="false">+84 999 999 999</string>
    <string name="new_credentials">new credentials</string>
    <string name="password_updated">Thank you!</string>
    <string name="new_credentials_detail">Click the "next" button to send \na verification link to your mail</string>
    <string name="reset_method_detail">Select kind of method you want to reset your password</string>
    <string name="handwriting">Handwriting\n Training</string>
    <string name="practice">Practice \nFor exams</string>
    <string name="kanamoji">Kanamoji</string>
    <string name="study_dekiru">Study Dekiru</string>
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>
    <string name="japanese_1">Kanamoji</string>
    <string name="japanese_2">Draw</string>
    <string name="japanese_3">Learn</string>
    <string name="do_exams">Test</string>
    <string name="verify_code">Verify code</string>
    <string name="english">English</string>
    <string name="japanese">日本語</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify_link">Link to verify is sent to your email</string>
    <string name="choose_verify_method">Select which type of verifying you want to use</string>
    <string name="arrangesentence">Arrange these words to become a meaningful sentence.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name ="dob">Date of birth</string>
    <string name="using_email">Using Email Method</string>
    <string name="newword">Vocabulary</string>
    <string name="grammar">Grammar</string>
    <string name="kanji">Kanji </string>
    <string name="hello">Hello</string>
    <string name="greeting">What do you want to learn today?❤</string>
    <string name="back">Back</string>
    <string name="tilte_test">You can select multiple items to test.</string>
    <string name="text_recognize">Your word is: </string>
    <string name="correct">Correct </string>
    <string name="incorrect">Incorrect!</string>
    <string name="lesson">"Lesson "</string>
    <string name="user_info_title">User Information</string>
    <string name="gender">Gender </string>
    <string name="chooseGender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="logout">Log Out</string>
    <string name="enteremailorusername">Enter your email or username</string>
    <string name="choosedob">Choose your date of birth</string>
    <string name="close">Close</string>
    <string name="enter_email_only">Enter Email</string>

</resources>