<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    tools:context=".Common.LoginSignup.StartUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:src="@mipmap/ic_launcher_foreground"></ImageView>

        <TextView
            android:layout_width="134dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:capitalize="characters"
            android:fontFamily="serif"
            android:text="FJSE"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFBA0606"
            android:textSize="@dimen/_35ssp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_28ssp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <Button
                android:id="@+id/btn_startup_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_weight="2"
                android:backgroundTint="#BA0606"
                android:onClick="callLoginActivity"
                android:text="@string/login"
                android:textColor="@color/white"
                android:transitionName="transition_login">

            </Button>

            <Button
                android:id="@+id/btn_startup_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="#BA0606"
                android:onClick="callSignupActivity"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:transitionName="transition_signup">

            </Button>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#BA0606"
            android:text="@string/about_us"
            android:textColor="@color/white">

        </Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:backgroundTint="#BA0606"
                android:onClick="btn_vietnamese"
                android:text="@string/vietnamese"
                android:textSize="@dimen/_10sdp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#BA0606"
                android:onClick="btn_english"
                android:text="@string/english"
                android:textSize="@dimen/_10sdp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:backgroundTint="#BA0606"
                android:onClick="btn_japanese"
                android:text="@string/japanese"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>