<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    android:id="@+id/scrollview_choosemethod"
    tools:context=".Common.LoginSignup.ChooseVerifyMethodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_signup2_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:onClick="returnSignup3"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/back_arrow_svgrepo_com"
            android:transitionName="transition_back_arrow_btn">

        </ImageView>

        <TextView
            android:id="@+id/text_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_40ssp"
            android:transitionName="transition_title_text">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/choose_verify_method"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp">

        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:id="@+id/mobile_method_icon"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_20sdp"
                android:src="@drawable/baseline_send_to_mobile_24">

            </ImageView>

            <TextView
                android:id="@+id/sms_method_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_toRightOf="@+id/mobile_method_icon"
                android:text="@string/using_sms"
                android:textSize="@dimen/_16ssp">

            </TextView>

            <TextView
                android:id="@+id/mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sms_method_title"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toRightOf="@+id/mobile_method_icon"
                android:text="@string/sms_number"
                android:textSize="@dimen/_18ssp">

            </TextView>

            <Button
                android:onClick="chooseOtpMethod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0000">
            </Button>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:id="@+id/mail_method_icon"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_20sdp"
                android:src="@drawable/baseline_email_24">

            </ImageView>

            <TextView
                android:id="@+id/mail_method_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_toRightOf="@+id/mail_method_icon"
                android:text="@string/using_email"
                android:textSize="@dimen/_16ssp">

            </TextView>

            <TextView
                android:id="@+id/mail_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mail_method_title"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toRightOf="@+id/mail_method_icon"
                android:text="@string/mail_address"
                android:textSize="@dimen/_18ssp">

            </TextView>

            <Button
                android:onClick="chooseEmailMethod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0000">

            </Button>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>